# vecjoin

./: .gitignore  .mcp.json  CMakeLists.txt  README.md  main.cpp  results.txt
Codes/: CMakeLists.txt  main.cpp  results.txt
Notes/: Discussions.md  Ideas.md  Plan.md  Plans.md
Notes/Literatures/: BaM GPU-Initiated On-Demand High-Throughput Storage Access.md  Billion-scale similarity search with GPUs.md  CAGRA Highly Parallel Graph Construction and Approximate Nearest Neighbor Search for GPUs.md  Cache-Oblivious Nested-Loop Joins.md  DiskANN Fast Accurate Billion-point Nearest Neighbor Search on a Single Node.md  DiskANN++ Efficient Page-based Search over Isomorphic Mapped Graph Index.md  DiskJoin Large-scale Vector Similarity Join with SSD.md  Efficient and robust approximate nearest neighbor search using Hierarchical Navigable Small World graphs.md  Evaluating Modern GPU Interconnect PCIe NVLink NVSwitch and GPUDirect.md  Fast Approximate Similarity Join in Vector Databases.md  GPU-based Efficient Join Algorithms on Hadoop.md  IVF-RaBitQ GPU-Native Approximate Nearest Neighbor Search.md  Legion Automatically Pushing the Envelope of Multi-GPU System for Billion-Scale GNN Training.md  Literatures.md  Product Quantization for Nearest Neighbor Search.md  RaBitQ Quantizing High-Dimensional Vectors with a Theoretical Error Bound for ANN Search.md  Red-Blue Pebbling Revisited Near Optimal Parallel Matrix-Matrix Multiplication.md  Revisiting Co-Processing for Hash Joins on the Coupled CPU-GPU Architecture.md  (+10 more)
Paper/: main.tex  ref.bib
include/: constants.h
src/: main.cpp
(+12 files in other folders)
